updated the productTypeServiceImpl by removing unnecessary lines of code