@@ -16,7 +16,6 @@ import org.springframework.stereotype.Service;
 
 import java.util.List;
 import java.util.regex.Pattern;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 @Service
@@ -29,15 +28,17 @@ public class ProductTypeServiceImpl implements ProductTypeService {
     public ResponseEntity<ResponseStructure<List<ProductType>>> addProductTypes(String topCategory, String subCategory, String[] productTypes) {
         TopCategory topCategoryEnum = validateAndGetTopCategory(topCategory);
         SubCategory subCategoryEnum = validateAndGetSubCategory(subCategory);
-
-        /* validating if the SubCategory given is one of them under the TopCategory
-         * If not one of them, throw an exception*/
+        /*
+        * validating if the SubCategory given is one of them under the TopCategory
+         * If not one of them, throw an exception
+         * */
         if (!topCategoryEnum.getSubCategories().contains(subCategoryEnum))
             throw new InvalidSubCategoryException("Failed to add product type");
-
-        /* collects the generated list of ProductTypes after ensuring if the similar ProductType doesn't already exist
+        /*
+        * collects the generated list of ProductTypes after ensuring if the similar ProductType doesn't already exist
          * in the database, and if the product type name contains only alphabetical characters with allowed special
-         * character '-'*/
+         * character '-'
+         * */
         List<ProductType> types = Stream.of(productTypes)
                 .filter(productType -> !typeRepo.existsByTypeNameAndSubCategoryAndTopCategory(productType.toLowerCase(), subCategoryEnum, topCategoryEnum))
                 .map(productType -> {
@@ -48,7 +49,7 @@ public class ProductTypeServiceImpl implements ProductTypeService {
                             .subCategory(subCategoryEnum)
                             .topCategory(topCategoryEnum)
                             .build();
-                }).collect(Collectors.toList());
+                }).toList();
 
         types = typeRepo.saveAll(types);
         return ResponseEntity.ok(new ResponseStructure<List<ProductType>>().setStatus(HttpStatus.OK.value())
@@ -63,7 +64,6 @@ public class ProductTypeServiceImpl implements ProductTypeService {
      */
     private SubCategory validateAndGetSubCategory(String subCategory) {
         try {
-            System.out.println(subCategory);
             return SubCategory.valueOf(subCategory.toUpperCase());
         } catch (IllegalArgumentException e) {
             throw new InvalidSubCategoryException("failed to add product type");
@@ -77,7 +77,6 @@ public class ProductTypeServiceImpl implements ProductTypeService {
      */
     private TopCategory validateAndGetTopCategory(String topCategory) {
         try {
-            System.out.println(topCategory);
             return TopCategory.valueOf(topCategory.toUpperCase());
         } catch (IllegalArgumentException e) {
             throw new InvalidTopCategoryException("failed to add product type");
